Update source code

--- a/UniversalDataCollector/UniversalDataCollector.csproj
+++ b/UniversalDataCollector/UniversalDataCollector.csproj
@@ -58,10 +58,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\MonitorConfig.cs" />
     <Compile Include="Services\ConfigService.cs" />
     <Compile Include="Services\CsvReaderService.cs" />
     <Compile Include="Services\MesService.cs" />
+    <Compile Include="Services\MonitorConfigService.cs" />
+    <Compile Include="Services\MonitorService.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\MonitorSettingViewModel.cs" />
+    <Compile Include="ViewModels\RelayCommand.cs" />
+    <Compile Include="Views\MonitorSettingWindow.xaml.cs">
+      <DependentUpon>MonitorSettingWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -74,6 +82,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\MonitorSettingWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\AppConfig.cs" />
