--- a/UniversalDataCollector/UniversalDataCollector.csproj
+++ b/UniversalDataCollector/UniversalDataCollector.csproj
@@ -65,8 +65,12 @@
     <Compile Include="Services\MonitorConfigService.cs" />
     <Compile Include="Services\MonitorService.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\MesSettingViewModel.cs" />
     <Compile Include="ViewModels\MonitorSettingViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
+    <Compile Include="Views\MesSettingWindow.xaml.cs">
+      <DependentUpon>MesSettingWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MonitorSettingWindow.xaml.cs">
       <DependentUpon>MonitorSettingWindow.xaml</DependentUpon>
     </Compile>
@@ -82,6 +86,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\MesSettingWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MonitorSettingWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
