--- a/UniversalDataCollector/packages.config
+++ b/UniversalDataCollector/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net451" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net451" />
+  <package id="NPOI" version="2.5.6" targetFramework="net451" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net451" />
+  <package id="SharpZipLib" version="1.3.3" targetFramework="net451" />
 </packages>
